<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/createRaceLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createRaceBtnStr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/orientLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orientStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/orient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radOrientPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:tag="@string/portLbl"
                android:text="@string/portLbl" />
            
            <RadioButton
                android:id="@+id/radOrientLand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="@string/landLbl"
                android:text="@string/landLbl" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/raceNameLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raceNameStr"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/raceNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/numRacersLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numRacersStr"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/numRacers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/numRacersStr" >

            <!-- Preview: listitem=@android:layout/simple_spinner_item -->
        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/createRaceBtnStr" />

</LinearLayout>